# spool2klipper

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  spool2klipper.cfg
.github/workflows/: docker-publish.yml  pylint.yml  test.yml
spool2klipper/: __init__.py  spool2klipper.py
src/spool2klipper/: api.py  engine.py  spool2klipper.py
tests/: conftest.py  test-requirements.txt  test_logic.py
