# SPDX-FileCopyrightText: 2026 Sebastian Andersson <sebastian@bittr.nu>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spool2klipper"
version = "0.1.0"
description = "Moonraker agent to send Spoolman's spool info to Klipper"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
    {name = "Sebastian Andersson", email = "sebastian@bittr.nu"}
]
keywords = ["spoolman", "3d-printing", "klipper", "moonraker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Printing",
]
dependencies = [
    "jsonrpc-websocket==3.2.0",
    "aiohttp==3.13.5",
    "toml==0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pylint>=4.0.0",
    "black>=25.9.0",
    "ruff>=0.1.0",
]

[project.scripts]
spool2klipper = "spool2klipper.spool2klipper:main"

[tool.setuptools]
packages = ["spool2klipper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
